z-index bug fixed

--- a/src/media.css
+++ b/src/media.css
@@ -4,7 +4,7 @@
     height: 100%;
     position: absolute;
     transition: 0.2s ease-in;
-    z-index: 10;
+    z-index: 15;
     left: 0;
     transform: translateX(-100%);
   }
@@ -16,7 +16,7 @@
   .sidebar_shown {
     transform: translateX(0%);
     transition: 0.2s ease-in;
-    z-index: 10;
+    z-index: 15;
     width: 70%;
   }
 
@@ -26,7 +26,7 @@
 
   .main__sidebar-icon {
     display: inline-block;
-    z-index: 15;
+    z-index: 20;
   }
 
   @keyframes icon-open-animation {
